--- a/src/Components/App/SearchBar/styles.css
+++ b/src/Components/App/SearchBar/styles.css
@@ -40,18 +40,20 @@
     height: 15.55px;
     position: absolute;
     right: 20px;
-    top: 25px;
+    top: 15px;
     transition: top 0.2s linear;
+    cursor: pointer;
+    padding: 10px 10px;
 }
 
 .invalidMessage{
     color: #FF5252;
     font-family: "Sans";
     font-size: 24px;
-    position: absolute;
     top: 40px;
     left: 0px;
     display: none;
+    text-align: center;
 }
 
 @media(max-width: 535px){
@@ -64,6 +66,6 @@
     }
 
     .searchIcon{
-        top: 15px;
+        top: 8px;
     }
 }
