chore: integrated container

--- a/src/Components/App/styles.css
+++ b/src/Components/App/styles.css
@@ -1,65 +1,62 @@
-/* @font-face {
+@font-face {
   font-family: "Inter-bold";
-  src: url(../FontFiles/Inter-Bold.ttf) format('truetype')
+  src: url(./../FontFiles/Inter-Bold.ttf)
 }
 @font-face {
   font-family: "Inconsolata";
-  src: url(../FontFiles/Inconsolata-VariableFont_wdth\wght.ttf) format('truetype')
+  src: url(./../FontFiles/Inconsolata-VariableFont_wdth\,wght.ttf);
 }
 @font-face {
   font-family: "Inter";
-  src: url(../FontFiles/Inter-VariableFont_slnt\wght.ttf) format('truetype')
+  src: url(./../FontFiles/Inter-VariableFont_slnt\,wght.ttf);
 }
 @font-face {
   font-family: "Lora";
-  src: url(../FontFiles/Lora-VariableFont_wght.ttf) format('truetype')
-} */
+  src: url(./../FontFiles/Lora-VariableFont_wght.ttf);
+}
 
-:root {
-  --color-black: #2d2d2d;
+:root{
+  --color-black: #2D2D2D;
   --color-white: white;
-  --box-shadow-dark: #a445ed;
+  --box-shadow-dark: #A445ED; 
   --box-shadow-light: rgba(0, 0, 0, 0.1);
   --font-inter: "Inter";
   --font-lora: "Lora";
   --font-Inconsolata: "Inconsolata";
-  --light-line: #e9e9e9;
-  --dark-line: #3a3a3a;
+  --light-line: #E9E9E9;
+  --dark-line: #3A3A3A;
   --loading-light: rgb(202, 202, 202);
   --loading-dark: rgb(70, 29, 71);
   --close: 50;
   --far: 10;
 }
 
-body {
-  transition: background-color 0.5s linear;
+
+body{
+  transition: background-color 0.2s linear;
   background-color: var(--bg-color);
   min-height: 100vh;
   margin: 0px;
 }
 
-ul li {
+ul li{
   font-family: var(--font-choosen);
-  margin-bottom: 14px;
-  line-height: 25px;
+  margin-bottom: 13px;
+  line-height: 24px;
   font-size: 18px;
   color: var(--text-color);
   font-weight: 400;
-  transition: font-size 0.4s linear;
+  transition: font-size 0.2s linear;
 }
 
-li::marker {
-  color: #8f19e8;
+li::marker{
+  color: #8F19E8;
 }
 
-@media (max-width: 800px) {
-  .app {
-    width: 90%;
-  }
-}
 
-@media (max-width: 535px) {
-  ul li {
-    font-size: 15px;
+
+@media(max-width: 535px){
+  ul li{
+      font-size: 15px;
   }
 }
